<resources>
    <string name="app_name">Random Bible Verse</string>
    <string name="banner_ad_unit_id">ca-app-pub-7520090340599763/9094681938</string>
    <string name="about">About</string>
    <string name="menu_option_more">All Verses</string>
    <string name="menu_home">Home</string>
    <string name="info_dialog">Info Dialog</string>
    <string name="god_loves_you">God loves you!</string>
    <string name="declaration">Jesus knows your situation. He knows you by name. Come to Him and He will give you rest. If you still haven\'t accepted Him as your personal Lord and Savior, you may begin by saying this prayer</string>
    <string name="prayer">Prayer</string>
    <string name="prayer_content">Dear God, thank you because you know me. Thank you because you died and rose again for me. Forgive me for all my sins. I accept You as my Lord and Savior and from now on, help me to live for You. In Jesus name, amen.</string>
    <string name="randomize">Randomize</string>
    <string name="prayer_acceptance">Dear God, thank you because you know me. Thank you because you died and rose again for me. Forgive me for all my sins. I accept You as my Lord and Savior and from now on, help me to live for You. In Jesus name, amen.</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="ok">OK</string>
    <string name="about_title">About</string>
    <string name="church_invitation">We are inviting you to attend our Worship Service. Visit www.jsoscc.com/contact-us for details.</string>
    <string name="developer_title">Developer:</string>
    <string name="email_title">Email:</string>
    <string name="website_title">Website:</string>
    <string name="dev_name">Jhesed D. Tacadena</string>
    <string name="dev_email">jhesed.tacadena@gmail.com</string>
    <string name="donate_btc">3DK8NFyGUJorowYDxcgkCp22hmKdEfnyS6</string>
    <string name="bug_report">Please contact me for mistyped Bible verses and bug reports. God bless you!</string>
    <string name="ok_text">OK</string>
    <string name="bible_verse_title">Bible Verses:</string>
    <string name="NIV_title">NIV</string>
    <string name="MBB_title">MBB</string>
    <string name="memorization_challenge">Memorization Challenge</string>
    <string name="bible_verse_memorization_challenge">Bible Verse Memorization Challenge</string>
    <string name="bible_verse_memorization_challenge_desc">Join JSOS Church in memorizing the following Bible Verses:</string>
    <string name="donate_btc_title">Donate BTC:</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="verify_bible_memorization">Verify Bible Memorization</string>
    <string name="prayer_title_icon">Prayer Title Icon</string>
    <string name="incorrect">Incorrect.</string>
    <string name="dialog_memorization_content">Input word by word content (NIV/MBB) of Bible Verse (punctuation marks are ignored):</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
</resources>
