<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#093145"
    tools:context="com.jjh.randomverse.MainActivity"
    android:padding="5dp">

    <RelativeLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_content">

        <!-- ADMOBS -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentBottom="true">
        </com.google.android.gms.ads.AdView>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayout">
                <TextView
                    android:id="@+id/titleHeader"
                    android:text="@string/god_loves_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorHeader"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp" />

                <!--NIV ENGLISH-->

                <TextView
                    android:id="@+id/titleEngNIV"
                    android:text=""
                    android:textColor="@color/colorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:textStyle="italic|bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/contentEngNIV"
                    android:textColor="@color/colorText"
                    android:text="@string/declaration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!--TAGALOG MBB-->

                <TextView
                    android:id="@+id/titleFilMBB"
                    android:text="@string/prayer"
                    android:textColor="@color/colorText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:textStyle="italic|bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/contentFilMBB"
                    android:text="@string/prayer_content"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="italic"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="101dp"
                    android:layout_height="35dp"
                    android:text="@string/randomize"
                    android:id="@+id/buttonRandom"
                    android:background="@color/colorHeader"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center" />

            </LinearLayout>
        </RelativeLayout>
</ScrollView>
