<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|fill_vertical"
    android:orientation="vertical">


    <!-- DIALOG BOX TITLE -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorHeader"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">


        <!--Change Icon and Title programatically-->

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:capitalize="words"
            android:clickable="false"
            android:gravity="fill_vertical|center"
            android:text="@string/verify_bible_memorization"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/cancel_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription=""
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </RelativeLayout>

    <!-- INFO -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorText"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:background="@color/colorText"
            android:gravity="center"
            android:orientation="horizontal">

            <!--TITLES-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/colorText"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/prayer_title"
                    android:layout_width="54dp"
                    android:layout_height="86dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <!--DYNAMIC VALUES-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight=".8"
                android:background="@color/colorText"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorText"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/dialog_memorization_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/memorization_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/incorrect_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/incorrect"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ff0000"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--END INFO-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialogOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorHeader"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>